--- a/assets/scss/components/buttons.scss
+++ b/assets/scss/components/buttons.scss
@@ -1,13 +1,74 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .button {
-  &-state {
+  @apply inline-flex items-center text-center px-5 py-2.5 text-base uppercase rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 hover:no-underline;
+  &-xs, &-sm {
+    &.button-counter {
+      & > span {
+        @apply w-4 h-4
+      }
+    }
+  }
+
+  &-xs {
+    @apply px-3 py-2 text-xs;
+  }
+
+  &-sm {
+    @apply px-3 py-2 text-sm;
+  }
+
+  &-base {
+    @apply px-5 py-2.5 text-base;
+  }
+
+  &-lg {
+    @apply px-5 py-3 text-base;
+  }
+
+  &-xl {
+    @apply text-base px-6 py-3.5;
+  }
+
+  &-icon {
+    &--only {
+      @apply p-2.5;
+    }
+
+    &--left svg, img, picture {
+      @apply w-5 h-5 mr-2 -ml-1;
+    }
+
+    &--right svg, img, picture {
+      @apply w-5 h-5 ml-2 -mr-1;
+    }
+  }
+
+  &-rounded {
+    @apply rounded-full;
+  }
+
+  &-counter {
+    & > span {
+      @apply inline-flex items-center justify-center w-5 h-5 ml-2 text-xs font-semibold rounded-full;
+    }
+  }
+
+  &.button-disabled, [attr="disabled"] {
+    @apply cursor-not-allowed;
+  }
+
+  &-color {
     &--success,
     &--primary {
       @apply text-white bg-primary-500 hover:bg-primary-700 focus:ring-primary-500 hover:text-white;
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-primary-200 hover:bg-primary-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-primary-200 text-primary-800;
         }
       }
@@ -16,11 +77,12 @@
     &--secondary {
       @apply text-white bg-secondary-500 hover:bg-secondary-700 focus:ring-primary-500 hover:text-white;
 
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-secondary-200 hover:bg-secondary-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-secondary-200 text-secondary-800;
         }
       }
@@ -29,11 +91,12 @@
     &--danger {
       @apply text-white bg-rose-500 hover:bg-rose-700 focus:ring-primary-500 hover:text-white;
 
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-rose-200 hover:bg-rose-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-rose-200 text-rose-800;
         }
       }
@@ -42,11 +105,12 @@
     &--warning {
       @apply text-white bg-yellow-500 hover:bg-yellow-700 focus:ring-primary-500 hover:text-white;
 
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-yellow-200 hover:bg-yellow-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-yellow-200 text-yellow-800;
         }
       }
@@ -55,11 +119,12 @@
     &--info {
       @apply text-white bg-blue-500 hover:bg-blue-700 focus:ring-primary-500 hover:text-white;
 
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-blue-200 hover:bg-blue-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-blue-200 text-blue-800;
         }
       }
@@ -68,11 +133,12 @@
     &--white {
       @apply text-primary bg-white focus:ring-primary-500 hover:text-primary-700;
 
-      &.button-disabled,[attr="disabled"] {
+      &.button-disabled, [attr="disabled"] {
         @apply bg-gray-200 hover:bg-gray-400;
       }
-      &.button-label {
-        &> span{
+
+      &.button-counter {
+        & > span {
           @apply bg-gray-200 text-gray-800;
         }
       }
@@ -81,8 +147,8 @@
     &--transparent {
       @apply text-primary bg-white focus:ring-primary-500 hover:text-primary-700 shadow-base bg-none;
 
-      &.button-label {
-        &> span{
+      &.button-counter {
+        & > span {
           @apply bg-gray-200 text-gray-800;
         }
       }
