--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,3 @@
-@use "./base/htmlElements.scss";
-@use "./components/buttons.scss";
-@use "./components/pagination.scss";
+@use "./base/htmlElements";
+@use "./components/pagination";
+@use "./components/dropdown";
