--- a/assets/scss/components/atoms/buttons.scss
+++ b/assets/scss/components/atoms/buttons.scss
@@ -5,7 +5,7 @@
   @apply inline-flex items-center text-center px-5 py-2.5 text-base uppercase rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 hover:no-underline;
   &-xs, &-sm {
     &.button-counter {
-      & > span {
+      & > .counter-label {
         @apply w-4 h-4
       }
     }
@@ -50,7 +50,7 @@
   }
 
   &-counter {
-    & > span {
+    & > .counter-label {
       @apply inline-flex items-center justify-center w-5 h-5 ml-2 text-xs font-semibold rounded-full;
     }
   }
@@ -62,93 +62,108 @@
   &-color {
     &--success,
     &--primary {
-      @apply text-white bg-primary-500 hover:bg-primary-700 focus:ring-primary-500 hover:text-white;
+      @apply bg-primary-500 hover:bg-primary-700 focus:ring-primary-500 hover:text-white;
+      & .button-text {
+        @apply text-white
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-primary-200 hover:bg-primary-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-primary-200 text-primary-800;
         }
       }
     }
 
     &--secondary {
-      @apply text-white bg-secondary-500 hover:bg-secondary-700 focus:ring-primary-500 hover:text-white;
-
+      @apply bg-secondary-500 hover:bg-secondary-700 focus:ring-primary-500 hover:text-white;
+      & .button-text {
+        @apply text-white
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-secondary-200 hover:bg-secondary-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-secondary-200 text-secondary-800;
         }
       }
     }
 
     &--danger {
-      @apply text-white bg-rose-500 hover:bg-rose-700 focus:ring-primary-500 hover:text-white;
-
+      @apply bg-rose-500 hover:bg-rose-700 focus:ring-primary-500 hover:text-white;
+      & .button-text {
+        @apply text-white
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-rose-200 hover:bg-rose-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-rose-200 text-rose-800;
         }
       }
     }
 
     &--warning {
-      @apply text-white bg-yellow-500 hover:bg-yellow-700 focus:ring-primary-500 hover:text-white;
-
+      @apply bg-yellow-500 hover:bg-yellow-700 focus:ring-primary-500 hover:text-white;
+      & .button-text {
+        @apply text-white
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-yellow-200 hover:bg-yellow-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-yellow-200 text-yellow-800;
         }
       }
     }
 
     &--info {
-      @apply text-white bg-blue-500 hover:bg-blue-700 focus:ring-primary-500 hover:text-white;
-
+      @apply bg-blue-500 hover:bg-blue-700 focus:ring-primary-500 hover:text-white;
+      & .button-text {
+        @apply text-white
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-blue-200 hover:bg-blue-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-blue-200 text-blue-800;
         }
       }
     }
 
     &--white {
-      @apply text-primary bg-white focus:ring-primary-500 hover:text-primary-700;
-
+      @apply bg-white focus:ring-primary-500 hover:text-primary-700;
+      & .button-text {
+        @apply text-primary
+      }
       &.button-disabled, [attr="disabled"] {
         @apply bg-gray-200 hover:bg-gray-400;
       }
 
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-gray-200 text-gray-800;
         }
       }
     }
 
     &--transparent {
-      @apply text-primary bg-white focus:ring-primary-500 hover:text-primary-700 shadow-base bg-none;
-
+      @apply bg-white focus:ring-primary-500 hover:text-primary-700 shadow-base bg-none;
+      & .button-text {
+        @apply text-primary
+      }
       &.button-counter {
-        & > span {
+        & > .counter-label {
           @apply bg-gray-200 text-gray-800;
         }
       }
@@ -156,26 +171,41 @@
   }
 
   &-outline {
-    @apply border border-transparent;
+    @apply border border-transparent bg-transparent hover:text-white;
     &--success,
     &--primary {
-      @apply text-primary-500 hover:bg-primary-500 border-primary-500 bg-transparent;
+      @apply hover:bg-primary-500 border-primary-500 bg-transparent;
+      & .button-text {
+        @apply text-primary-500 hover:text-white
+      }
     }
 
     &--secondary {
       @apply text-secondary-500 hover:bg-secondary-500 border-secondary-500 bg-transparent;
+      & .button-text {
+        @apply text-secondary-500  hover:text-white
+      }
     }
 
     &--danger {
       @apply text-rose-500 hover:bg-rose-500 border-rose-500 bg-transparent;
+      & .button-text {
+        @apply text-rose-500 hover:text-white
+      }
     }
 
     &--warning {
       @apply text-yellow-500 hover:bg-yellow-500 border-yellow-500 bg-transparent;
+      & .button-text {
+        @apply text-yellow-500 hover:text-white
+      }
     }
 
     &--info {
       @apply text-blue-500 hover:bg-blue-500 border-blue-500 bg-transparent;
+      & .button-text {
+        @apply text-blue-500 hover:text-white
+      }
     }
   }
 }
