--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,1 +1,5 @@
-@use "./base/htmlElements";
+@use "assets/scss/base/htmlElements";
+@use 'assets/scss/components/molecules/dropdown';
+@use 'assets/scss/components/atoms/buttons';
+@use 'assets/scss/components/molecules/pagination';
+@use 'assets/scss/components/organisms/navigation/header';
