--- a/assets/scss/components/organisms/navigation/header.scss
+++ b/assets/scss/components/organisms/navigation/header.scss
@@ -22,6 +22,19 @@
 
   .header-container {
     @apply container flex flex-wrap justify-between items-center;
+
+  }
+
+  .header-menu-navigation {
+    @apply hidden justify-between w-full lg:flex lg:w-auto lg:order-1 h-auto items-center;
+
+    &--list{
+      @apply flex flex-col mt-4 md:flex-row md:mt-0 md:text-sm md:font-medium
+    }
+
+    &--item {
+      @apply block py-2 pr-4 pl-3 text-gray-900 rounded font-medium text-base dark:text-white border;
+    }
   }
 
   .right-content {
@@ -30,6 +43,7 @@
 
   .mobile-navigation {
     @apply inline-flex items-center lg:hidden text-3xl text-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 dark:text-white dark:focus:ring-primary-500;
+
     &-button {
       &--open {
         & .menu-icon {
