--- a/assets/scss/components/organisms/navigation/header.scss
+++ b/assets/scss/components/organisms/navigation/header.scss
@@ -1,70 +1,76 @@
-.header-navigation {
-  @apply flex items-center justify-center w-screen;
-  &.scroll {
-    &-down {
-    }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-    &-up {
-      @apply sticky top-0;
-    }
-  }
-}
-
-.header-menu-bar {
-  @apply px-6 lg:px-12  bg-white border-gray-200 dark:bg-gray-800 shadow-base transition-all will-change-auto;
-  &.scrolling-menu {
-    @apply w-full bg-white border-gray-200 dark:bg-gray-800 shadow-base;
-  }
-
-  &.floating-menu {
-    @apply w-[95%] lg:w-[90%] rounded-2xl mt-8 bg-white border-gray-200 dark:bg-gray-800 shadow-base;
-  }
-
-  .header-container {
-    @apply container flex flex-wrap justify-between items-center;
-
-  }
-
-  .header-menu-navigation {
-    @apply hidden justify-between w-full lg:flex lg:w-auto lg:order-1 h-auto items-center;
-
-    &--list{
-      @apply flex flex-col mt-4 md:flex-row md:mt-0 md:text-sm md:font-medium
-    }
-
-    &--item {
-      @apply block py-2 pr-4 pl-3 text-gray-900 rounded font-medium text-base dark:text-white border;
-    }
-  }
-
-  .right-content {
-    @apply flex md:order-2 items-center justify-center space-x-2 md:space-x-8;
-  }
-
-  .mobile-navigation {
-    @apply inline-flex items-center lg:hidden text-3xl text-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 dark:text-white dark:focus:ring-primary-500;
-
-    &-button {
-      &--open {
-        & .menu-icon {
-          @apply hidden;
-        }
-
-        & .close-icon {
-          @apply inline-block
-        }
+@layer components {
+  .header-navigation {
+    @apply flex items-center justify-center w-full;
+    &.scroll {
+      &-down {
       }
 
-      &--closed {
-        & .menu-icon {
-          @apply inline-block;
-        }
-
-        & .close-icon {
-          @apply hidden;
-        }
+      &-up {
+        @apply sticky top-0;
+        z-index: 200;
       }
     }
   }
-}
 
+  .header-menu-bar {
+    @apply w-full  px-6 lg:px-12 bg-white border-gray-200 dark:bg-gray-800 shadow-base transition-all will-change-auto;
+    &.scrolling-menu {
+      @apply bg-white border-gray-200 dark:bg-gray-800 shadow-base rounded-b-2xl ;
+    }
+
+    &.floating-menu {
+      @apply rounded-2xl mt-8 bg-white border-gray-200 dark:bg-gray-800 shadow-base;
+    }
+
+    .header-container {
+      @apply container flex flex-wrap justify-between items-center;
+
+    }
+
+    .header-menu-navigation {
+      @apply hidden justify-between lg:flex lg:w-auto lg:order-1 h-auto items-center;
+
+      &--list {
+        @apply flex flex-col mt-4 md:flex-row md:mt-0 md:text-sm md:font-medium
+      }
+
+      &--item {
+        @apply block py-2 pr-4 pl-3 text-gray-900 rounded font-medium text-base dark:text-white border;
+      }
+    }
+
+    .right-content {
+      @apply flex md:order-2 items-center justify-center space-x-2 md:space-x-8;
+    }
+
+    .mobile-navigation {
+      @apply inline-flex items-center lg:hidden text-3xl text-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 dark:text-white dark:focus:ring-primary-500;
+
+      &-button {
+        &--open {
+          & .menu-icon {
+            @apply hidden;
+          }
+
+          & .close-icon {
+            @apply inline-block
+          }
+        }
+
+        &--closed {
+          & .menu-icon {
+            @apply inline-block;
+          }
+
+          & .close-icon {
+            @apply hidden;
+          }
+        }
+      }
+    }
+  }
+}
