--- a/assets/scss/base/htmlElements.scss
+++ b/assets/scss/base/htmlElements.scss
@@ -10,3 +10,6 @@ a, svg, img, input, textarea, button {
 a {
   @apply cursor-pointer text-base text-gray-500 hover:text-gray-900 hover:underline hover:text-primary-500
 }
+p{
+  @apply text-gray-900;
+}
