--- a/assets/scss/components/molecules/dropdown.scss
+++ b/assets/scss/components/molecules/dropdown.scss
@@ -49,7 +49,7 @@
     &-counter {
       & > .counter-label {
         @apply inline-flex
-        font-semibold
+        font-bold
         h-5
         items-center
         justify-center
