--- a/assets/scss/components/molecules/videoBanner.scss
+++ b/assets/scss/components/molecules/videoBanner.scss
@@ -7,7 +7,7 @@
     @apply grid grid-cols-1 md:grid-cols-2 gap-10;
     &-content {
       &--title {
-        @apply text-5xl font-semibold leading-none mb-5;
+        @apply text-5xl font-bold leading-none mb-5;
       }
 
       &--text {
