feat: initial header menu

--- a/assets/scss/components/organisms/navigation/header.scss
+++ b/assets/scss/components/organisms/navigation/header.scss
@@ -27,7 +27,7 @@
     }
 
     .header-container {
-      @apply container flex flex-wrap justify-between items-center;
+      @apply flex flex-wrap justify-between items-center;
 
     }
 
