--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,5 +10,6 @@
 @use 'assets/scss/components/molecules/pagination';
 @use 'assets/scss/components/molecules/docsCard';
 @use 'assets/scss/components/molecules/videoBanner';
+@use 'assets/scss/components/molecules/megamenu';
 
 @use 'assets/scss/components/organisms/navigation/header';
