--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,14 +2,16 @@
 
 @use "assets/scss/layouts/default";
 
-@use 'assets/scss/components/atoms/buttons';
-@use 'assets/scss/components/atoms/badge';
-@use 'assets/scss/components/atoms/icons';
+@use "assets/scss/components/atoms/buttons";
+@use "assets/scss/components/atoms/badge";
+@use "assets/scss/components/atoms/icons";
 
-@use 'assets/scss/components/molecules/dropdown';
-@use 'assets/scss/components/molecules/pagination';
-@use 'assets/scss/components/molecules/docsCard';
-@use 'assets/scss/components/molecules/videoBanner';
-@use 'assets/scss/components/molecules/megamenu';
+@use "assets/scss/components/molecules/blogCard";
+@use "assets/scss/components/molecules/callToActionBanner";
+@use "assets/scss/components/molecules/docsCard";
+@use "assets/scss/components/molecules/dropdown";
+@use "assets/scss/components/molecules/megamenu";
+@use "assets/scss/components/molecules/pagination";
+@use "assets/scss/components/molecules/videoBanner";
 
-@use 'assets/scss/components/organisms/navigation/header';
+@use "assets/scss/components/organisms/navigation/header";
