--- a/assets/scss/components/organisms/navigation/header.scss
+++ b/assets/scss/components/organisms/navigation/header.scss
@@ -4,51 +4,125 @@
 
 @layer components {
   .header-navigation {
-    @apply flex items-center justify-center w-full container;
+    @apply
+    flex
+    items-center
+    justify-center
+    w-full container;
+
     &.scroll {
       &-down {
       }
 
       &-up {
-        @apply sticky top-0 max-w-full px-0;
         z-index: 200;
+
+        @apply
+        sticky
+        top-0
+        max-w-full
+        px-0;
       }
     }
   }
 
   .header-menu-bar {
-    @apply w-full px-6 lg:px-12 bg-white border-gray-200 dark:bg-gray-800 shadow-base transition-all will-change-auto;
+    @apply
+    w-full
+    px-6
+    lg:px-12
+    bg-white
+    border-gray-200
+    dark:bg-gray-800
+    shadow-base
+    transition-all
+    will-change-auto;
+
     &.scrolling-menu {
-      @apply bg-white border-gray-200 dark:bg-gray-800 shadow-base rounded-b-2xl ;
+      @apply
+      bg-white
+      border-gray-200
+      dark:bg-gray-800
+      shadow-base rounded-none;
     }
 
     &.floating-menu {
-      @apply rounded-2xl mt-8 bg-white border-gray-200 dark:bg-gray-800 shadow-base;
+      @apply
+      rounded-2xl
+      mt-2
+      lg:mt-8
+      bg-white
+      border-gray-200
+      dark:bg-gray-800
+      shadow-base;
     }
 
     .header-container {
-      @apply flex flex-wrap justify-between items-center;
-
+      @apply
+      flex
+      flex-wrap
+      justify-between
+      items-center;
     }
 
     .header-menu-navigation {
-      @apply hidden justify-between lg:flex lg:w-auto lg:order-1 h-auto items-center;
+      @apply
+      hidden
+      justify-between
+      lg:flex
+      lg:w-auto
+      lg:order-1
+      h-auto
+      items-center;
 
       &--list {
-        @apply flex flex-col mt-4 md:flex-row md:mt-0 md:text-sm md:font-medium
+        @apply
+        flex
+        flex-col
+        mt-4
+        md:flex-row
+        md:mt-0
+        md:text-sm
+        md:font-medium;
       }
 
       &--item {
-        @apply block py-2 pr-4 pl-3 text-gray-900 rounded font-medium text-base dark:text-white border;
+        @apply
+        block
+        py-2
+        pr-4
+        pl-3
+        text-gray-900
+        rounded
+        font-medium
+        text-base
+        dark:text-white
+        border;
       }
     }
 
     .right-content {
-      @apply flex md:order-2 items-center justify-center space-x-2 md:space-x-8;
+      @apply
+      flex md:order-2
+      items-center
+      justify-center
+      space-x-2
+      md:space-x-8;
     }
 
     .mobile-navigation {
-      @apply inline-flex items-center lg:hidden text-3xl text-gray-900 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 dark:text-white dark:focus:ring-primary-500;
+      @apply
+      inline-flex
+      items-center
+      lg:hidden
+      text-3xl
+      text-gray-900
+      rounded-lg
+      focus:outline-none
+      focus:ring-2
+      focus:ring-primary-500
+      dark:text-white
+      dark:focus:ring-primary-500;
 
       &-button {
         &--open {
@@ -62,6 +136,7 @@
         }
 
         &--closed {
+
           & .menu-icon {
             @apply inline-block;
           }
