--- a/assets/scss/layouts/default.scss
+++ b/assets/scss/layouts/default.scss
@@ -4,18 +4,36 @@
 
 @layer components {
   .main-layout {
-    @apply w-full mx-auto;
+    @apply
+    w-full
+    mx-auto;
+
     &-container {
-      @apply py-20 px-10 container mx-auto max-w-screen-xl space-y-14;
+      @apply
+      py-20
+      px-10
+      container
+      mx-auto
+      max-w-screen-xl
+      space-y-14;
     }
 
     &-content {
     }
 
     &-full-section {
-      @apply bg-gray-50 w-full;
+      @apply
+      bg-gray-50
+      w-full;
+
       &--container {
-        @apply container mx-auto max-w-screen-xl py-10 px-10 space-y-8;
+        @apply
+        container
+        mx-auto
+        max-w-screen-xl
+        py-10
+        px-10
+        space-y-8;
       }
     }
   }
