feat: added Modal

--- a/assets/scss/components/atoms/buttons.scss
+++ b/assets/scss/components/atoms/buttons.scss
@@ -199,6 +199,7 @@
         bg-white
         focus:ring-primary-500
         hover:text-primary-700
+        hover:bg-gray-100
         bg-none;
 
         &.button-text,
